--- a/taller2/css/styles.css
+++ b/taller2/css/styles.css
@@ -2,3 +2,44 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+/* line 8, ../sass/styles.scss */
+body {
+  margin: 0px;
+}
+
+/* line 13, ../sass/styles.scss */
+header {
+  padding: 20px;
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  background-color: blue;
+  width: 100%;
+  height: 40px;
+}
+/* line 15, ../sass/styles.scss */
+header #icono {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: aqua;
+  vertical-align: top;
+}
+/* line 24, ../sass/styles.scss */
+header #texto {
+  vertical-align: top;
+  display: inline-block;
+  width: 150px;
+  height: 30px;
+  background-color: aqua;
+}
+
+/* line 60, ../sass/styles.scss */
+footer {
+  bottom: 0px;
+  left: 0px;
+  position: fixed;
+  background-color: violet;
+  width: 100%;
+  height: 100px;
+}
