--- a/taller2/sass/styles.scss
+++ b/taller2/sass/styles.scss
@@ -5,58 +5,6 @@
 
 //@import "compass/reset";
 
-body
-{
-    margin: 0px;
-}
-
-header
-{
-    #icono
-    {
-        display:inline-block;
-        width: 30px;
-        height: 30px;
-        background-color: aqua;
-        vertical-align: top;
-    }
-
-    #texto
-    {
-        vertical-align: top;
-        display:inline-block;
-        width: 150px;
-        height: 30px;
-        background-color: aqua;
-    }
-
-    padding: 20px;
-    top: 0px;
-    left: 0px;
-    position: fixed;
-    background-color: blue;
-    width: 100%;
-    height: 40px;
-}
-
-main
-{
-    #titulo
-    {
-
-    }
-
-    #imagen
-    {
-
-    }
-
-    #caracteristicas
-    {
-
-    }
-}
-
 footer
 {
     h2
@@ -75,4 +23,118 @@ footer
     background-color: violet;
     width: 100%;
     height: 100px;
+}
+
+main
+{
+    #pie
+    {
+        width: 100%;
+        height: 150px;
+    }
+
+    #caracteristica
+    {
+        #tituloPpal
+        {
+            padding: 10px;
+            margin: 10px;
+            width: 300px;
+            height: 30px;
+    
+            .elementsTituloPpal
+            {
+                display: inline-block;
+            }
+        }
+
+        #imagen
+        {
+            padding: 10px;
+            margin: 10px;
+            width: 300px;
+            height: 300px;
+            background-color: orange;
+        }
+    }
+
+    #icono
+    {
+        #tituloPpal
+        {
+            padding: 10px;
+            margin: 10px;
+            background-color: blue;
+            width: 300px;
+            height: 30px;
+            color: white;
+            font-family: arial;
+            font-size: 20px;
+    
+            .elementsTituloPpal
+            {
+                display: inline-block;
+            }
+        }
+
+        #imagen
+        {
+            margin: 10px;
+            width: 320px;
+            height: 320px;
+            background-color: orange;
+        }
+    }
+
+    .caja
+    {
+        display: inline-block;
+        margin: 10px;
+    }
+
+    #cabecera
+    {
+        width: 100%;
+        height: 150px;
+    }
+}
+
+header
+{
+    #texto
+    {
+        padding: 5px;
+        width: 170px;
+        height: 40px;
+        color: white;
+        font-size: 30px;
+        font-family: Arial;
+    }
+
+    #icono
+    {
+        vertical-align: top;
+        width: 60px;
+        height: 60px;
+        background-color: aqua;
+    }
+
+    div
+    {
+        display:inline-block;
+        vertical-align: top;
+    }
+
+    padding: 20px;
+    background-color: blue;
+    width: 100%;
+    height: 80px;
+    top: 0px;
+    left: 0px;
+    position: fixed;
+}
+
+body
+{
+    margin: 0px;
 }
