--- a/taller2/sass/styles.scss
+++ b/taller2/sass/styles.scss
@@ -1,163 +1,9 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
-//@import "compass/reset";
-
-footer
-{
-    h2
-    {
-
-    }
-
-    #p4
-    {
-        background-image: url('../img/025.png');
-    }
-
-    #p3
-    {
-        background-image: url('../img/012.png');
-    }
-
-    #p2
-    {
-        background-image: url('../img/009.png');
-    }
-
-    #p1
-    {
-        background-image: url('../img/007.png');
-    }
-
-    div
-    {
-        display: inline-block;
-        width: 143px;
-        height: 143px;
-    }
-
-    bottom: 0px;
-    left: 0px;
-    position: fixed;
-    background-color: violet;
-    width: 100%;
-    height: 100px;
-}
-
-main
-{
-    #pie
-    {
-        width: 100%;
-        height: 150px;
-    }
-
-    #caracteristica
-    {
-        #tituloPpal
-        {
-            padding: 10px;
-            margin: 10px;
-            width: 300px;
-            height: 30px;
-    
-            .elementsTituloPpal
-            {
-                display: inline-block;
-            }
-        }
-
-        #imagen
-        {
-            padding: 10px;
-            margin: 10px;
-            width: 300px;
-            height: 300px;
-            background-color: orange;
-        }
-    }
-
-    #icono
-    {
-        #tituloPpal
-        {
-            padding: 10px;
-            margin: 10px;
-            background-color: blue;
-            width: 300px;
-            height: 30px;
-            color: white;
-            font-family: arial;
-            font-size: 20px;
-    
-            .elementsTituloPpal
-            {
-                display: inline-block;
-            }
-        }
-
-        #imagen
-        {
-            background-image: url('../img/006.png');
-            margin: 10px;
-            width: 380px;
-            height: 380px;
-            background-color: orange;
-        }
-    }
-
-    .caja
-    {
-        display: inline-block;
-        margin: 10px;
-    }
-
-    #cabecera
-    {
-        width: 100%;
-        height: 150px;
-    }
-}
-
 header
 {
-    #texto
-    {
-        padding: 5px;
-        width: 170px;
-        height: 40px;
-        color: white;
-        font-size: 30px;
-        font-family: Arial;
-    }
-
-    #icono
-    {
-        vertical-align: top;
-        width: 60px;
-        height: 60px;
-        background-color: aqua;
-    }
-
-    div
-    {
-        display:inline-block;
-        vertical-align: top;
-    }
-
-    padding: 20px;
-    background-color: blue;
+    background-color: gray;
+    height: 60px;
     width: 100%;
-    height: 80px;
-    top: 0px;
     left: 0px;
+    top: 0px;
     position: fixed;
-}
-
-body
-{
-    margin: 0px;
 }
