--- a/taller2/css/styles.css
+++ b/taller2/css/styles.css
@@ -1,130 +1,9 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 8, ../sass/styles.scss */
-footer {
-  bottom: 0px;
-  left: 0px;
-  position: fixed;
-  background-color: violet;
-  width: 100%;
-  height: 100px;
-}
-/* line 15, ../sass/styles.scss */
-footer #p4 {
-  background-image: url("../img/025.png");
-}
-/* line 20, ../sass/styles.scss */
-footer #p3 {
-  background-image: url("../img/012.png");
-}
-/* line 25, ../sass/styles.scss */
-footer #p2 {
-  background-image: url("../img/009.png");
-}
-/* line 30, ../sass/styles.scss */
-footer #p1 {
-  background-image: url("../img/007.png");
-}
-/* line 35, ../sass/styles.scss */
-footer div {
-  display: inline-block;
-  width: 143px;
-  height: 143px;
-}
-
-/* line 52, ../sass/styles.scss */
-main #pie {
-  width: 100%;
-  height: 150px;
-}
-/* line 60, ../sass/styles.scss */
-main #caracteristica #tituloPpal {
-  padding: 10px;
-  margin: 10px;
-  width: 300px;
-  height: 30px;
-}
-/* line 67, ../sass/styles.scss */
-main #caracteristica #tituloPpal .elementsTituloPpal {
-  display: inline-block;
-}
-/* line 73, ../sass/styles.scss */
-main #caracteristica #imagen {
-  padding: 10px;
-  margin: 10px;
-  width: 300px;
-  height: 300px;
-  background-color: orange;
-}
-/* line 85, ../sass/styles.scss */
-main #icono #tituloPpal {
-  padding: 10px;
-  margin: 10px;
-  background-color: blue;
-  width: 300px;
-  height: 30px;
-  color: white;
-  font-family: arial;
-  font-size: 20px;
-}
-/* line 96, ../sass/styles.scss */
-main #icono #tituloPpal .elementsTituloPpal {
-  display: inline-block;
-}
-/* line 102, ../sass/styles.scss */
-main #icono #imagen {
-  background-image: url("../img/006.png");
-  margin: 10px;
-  width: 380px;
-  height: 380px;
-  background-color: orange;
-}
-/* line 112, ../sass/styles.scss */
-main .caja {
-  display: inline-block;
-  margin: 10px;
-}
-/* line 118, ../sass/styles.scss */
-main #cabecera {
-  width: 100%;
-  height: 150px;
-}
-
-/* line 125, ../sass/styles.scss */
+/* line 1, ../sass/styles.scss */
 header {
-  padding: 20px;
-  background-color: blue;
-  width: 100%;
-  height: 80px;
-  top: 0px;
-  left: 0px;
-  position: fixed;
-}
-/* line 127, ../sass/styles.scss */
-header #texto {
-  padding: 5px;
-  width: 170px;
-  height: 40px;
-  color: white;
-  font-size: 30px;
-  font-family: Arial;
-}
-/* line 137, ../sass/styles.scss */
-header #icono {
-  vertical-align: top;
-  width: 60px;
+  background-color: gray;
   height: 60px;
-  background-color: aqua;
-}
-/* line 145, ../sass/styles.scss */
-header div {
-  display: inline-block;
-  vertical-align: top;
-}
-
-/* line 160, ../sass/styles.scss */
-body {
-  margin: 0px;
+  width: 100%;
+  left: 0px;
+  top: 0px;
+  position: fixed;
 }
