--- a/taller2/css/stylesMain.css
+++ b/taller2/css/stylesMain.css
@@ -2,58 +2,98 @@
 main {
   padding: 20px;
 }
-/* line 4, ../sass/stylesMain.scss */
+/* line 3, ../sass/stylesMain.scss */
 main .cajas {
   vertical-align: top;
   display: inline-block;
 }
-/* line 10, ../sass/stylesMain.scss */
+/* line 9, ../sass/stylesMain.scss */
 main #tituloPpal {
+  height: 50px;
+  width: 270px;
+  padding-left: 40px;
+  padding-top: 8px;
+  border-radius: 5px;
+  background-color: gray;
+}
+/* line 11, ../sass/stylesMain.scss */
+main #tituloPpal div {
+  vertical-align: middle;
+  display: inline-block;
+}
+/* line 17, ../sass/stylesMain.scss */
+main #tituloPpal #llama {
+  background-position: 0 -680px;
+  width: 38px;
+  height: 45px;
+}
+/* line 24, ../sass/stylesMain.scss */
+main #tituloPpal #tag {
   color: black;
   font-family: arial;
-  font-size: 40px;
-  width: 300px;
-  height: 50px;
+  font-size: 30px;
 }
-/* line 21, ../sass/stylesMain.scss */
+/* line 41, ../sass/stylesMain.scss */
 main #ilustracion #imagen {
-  background-image: url("../img/ch.png");
+  background-position: 0 -400px;
   width: 280px;
   height: 280px;
 }
-/* line 29, ../sass/stylesMain.scss */
+/* line 49, ../sass/stylesMain.scss */
 main #caracteristicas {
   padding: 10px;
   border-radius: 10px;
   background-color: blue;
-  width: 280px;
-  height: 280px;
+  width: 290px;
+  height: 400px;
 }
-/* line 31, ../sass/stylesMain.scss */
-main #caracteristicas div {
-  margin: 25px;
+/* line 51, ../sass/stylesMain.scss */
+main #caracteristicas .feature {
+  display: inline-block;
+  margin: 20px;
   color: white;
-  font-size: 15px;
+  font-size: 25px;
   font-family: arial;
+  width: auto;
+  height: auto;
 }
-/* line 48, ../sass/stylesMain.scss */
+/* line 53, ../sass/stylesMain.scss */
+main #caracteristicas .feature div {
+  display: inline-block;
+}
+/* line 74, ../sass/stylesMain.scss */
 main #blanco1 {
   height: 50px;
 }
-/* line 53, ../sass/stylesMain.scss */
+/* line 79, ../sass/stylesMain.scss */
 main #blanco2 {
   height: 300px;
 }
 
 @media (min-width: 450px) {
-  /* line 65, ../sass/stylesMain.scss */
+  /* line 91, ../sass/stylesMain.scss */
   main #caracteristicas {
     background-color: blue;
-    width: 600px;
-    height: 300px;
+    width: 300px;
+    height: 280px;
   }
-  /* line 72, ../sass/stylesMain.scss */
+  /* line 97, ../sass/stylesMain.scss */
+  main #caracteristicas .feature {
+    width: 100px;
+    height: 50px;
+  }
+  /* line 99, ../sass/stylesMain.scss */
+  main #caracteristicas .feature div {
+    display: flex;
+  }
+  /* line 109, ../sass/stylesMain.scss */
   main #blanco2 {
     height: 130px;
   }
+}
+/* line 96, all/*.png */
+main #tituloPpal #llama, main #ilustracion #imagen
+{
+  background-image: url('../img/all-s0f5014579b.png');
+  background-repeat: no-repeat;
 }
