--- a/taller3/src/app/component/footer/footer.component.html
+++ b/taller3/src/app/component/footer/footer.component.html
@@ -1,3 +1,11 @@
 <p>
   footer works!
 </p>
+
+<footer>
+    <div>
+        <div id="imgFooter"></div>
+        <div id="tituloFooter">POKEDEX_</div>
+    </div>
+    
+</footer>
