Creación inicial del footer

--- a/taller3/src/app/component/footer/footer.component.scss
+++ b/taller3/src/app/component/footer/footer.component.scss
@@ -29,7 +29,7 @@ footer
 
     display: flex;
     justify-content: center;
-    top: 0px;
+    bottom: 0px;
     left: 0px;
     position: fixed;
     background-color: gray;
