--- a/taller3/src/app/component/header/header.component.html
+++ b/taller3/src/app/component/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<header>
+    <div>
+        <div id="imgFooter"></div>
+        <div id="tituloFooter">POKEDEX_</div>
+    </div>
+</header>
