--- a/taller3/src/app/component/footer/footer.component.html
+++ b/taller3/src/app/component/footer/footer.component.html
@@ -1,6 +1,13 @@
 <footer>
     <div>
-        <div id="imgFooter"></div>
-        <div id="tituloFooter">POKEDEX_</div>
+        <div id="titulo">OTHERS</div>
+        <div id="elementos">
+            <div id="pokemon1"></div>
+            <div id="pokemon2"></div>
+            <div id="pokemon3"></div>
+            <div id="pokemon4"></div>
+            <div id="pokemon5"></div>
+            <div id="pokemon6"></div>
+        </div> 
     </div>
 </footer>
