Cambios parciales en el main

--- a/taller3/src/app/component/pokemain/pokemain.component.html
+++ b/taller3/src/app/component/pokemain/pokemain.component.html
@@ -1,3 +1,22 @@
-<p>
-  pokemain works!
-</p>
+
+<main>
+    <div id="superior"></div>  
+
+    <div id="principal">
+      <div id="titulo">
+         <div id="icono"></div>
+         <div id="texto">CHARIZARD</div>
+      </div>
+
+    
+      <div id="imagen"></div>
+      
+     </div>
+
+     
+    <div id="caracteristicas"></div>
+    
+
+    <div id="inferior"></div>  
+</main>
+
