--- a/taller3/src/app/component/pokemain/pokemain.component.scss
+++ b/taller3/src/app/component/pokemain/pokemain.component.scss
@@ -1,15 +1,5 @@
 main
 {
-    #inferior
-    {
-        height: 235px;
-    }
-
-    #superior
-    {
-        height: 100px;
-    }
-
     #principal
     {
         #titulo
@@ -66,6 +56,9 @@ main
         margin: 10px auto;
         border-radius: 3px;
     }
+
+    margin-top: 120px;
+    margin-bottom: 250px;
 }
 
 
@@ -86,5 +79,7 @@ main
             margin-top: 100px;
             display: inline-block;
         }
+
+        margin: 0 auto;
     }
 }
