Pokemain responsive con imagenes parcial/

--- a/taller3/src/app/component/header/header.component.html
+++ b/taller3/src/app/component/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div>
         <div id="imgFooter"></div>
-        <div id="tituloFooter">POKEDEX_</div>
+        <div id="tituloFooter">POKÉDEX_</div>
     </div>
 </header>
