--- a/taller3/src/app/component/pokemain/pokemain.component.html
+++ b/taller3/src/app/component/pokemain/pokemain.component.html
@@ -1,19 +1,23 @@
 
 <main>  
-
     <div id="principal">
-      <div id="titulo">
-         <div id="icono"></div>
-         <div id="texto">CHARIZARD</div>
-      </div>
+        <div id="titulo">
+            <div id="icono"></div>
+            <div id="texto">CHARIZARD</div>
+        </div>
 
-    
-      <div id="imagen"></div>
-      
-     </div>
+        <div id="imagen"></div>   
+    </div>
 
-     
-    <div id="caracteristicas"></div>
-    
+    <div id="caracteristicas">
+        <ul>
+            <li>FEATURES</li>
+            <li>Altura: 1,7 m</li>
+            <li>Peso: 90,5 Kg</li>
+            <li>Categoría: Llama</li>
+            <li>Habilidad: Mar Llamas</li>
+            <li>Sexo: Mixto</li>
+        </ul>
+    </div>
 </main>
 
