--- a/taller3/src/app/component/pokemain/pokemain.component.html
+++ b/taller3/src/app/component/pokemain/pokemain.component.html
@@ -17,6 +17,13 @@
             <li>Categoría: Llama</li>
             <li>Habilidad: Mar Llamas</li>
             <li>Sexo: Mixto</li>
+            
+            <div>
+                <button id="subir" (click)="puntaje = puntaje + 1"></button>
+                <li>{{puntaje}}</li>
+                <button id="bajar" (click)="puntaje = puntaje - 1"></button>
+            </div>
+            
         </ul>
     </div>
 </main>
