imagenes en footer

--- a/taller3/src/app/component/footer/footer.component.scss
+++ b/taller3/src/app/component/footer/footer.component.scss
@@ -4,6 +4,26 @@ footer
     {
         #stockPokemon
         {
+            #pokemon4
+            {
+                background-image: url('../../../assets/p4.png');
+            }
+
+            #pokemon3
+            {
+                background-image: url('../../../assets/p3.png');
+            }
+
+            #pokemon2
+            {
+                background-image: url('../../../assets/p2.png');
+            }
+
+            #pokemon1
+            {
+                background-image: url('../../../assets/p1.png');
+            }
+
             .pokemon
             {
                 display: inline-block;
