--- a/taller3/src/app/component/footer/footer.component.scss
+++ b/taller3/src/app/component/footer/footer.component.scss
@@ -6,7 +6,7 @@ footer
         {
             .pokemon:hover
             {
-                background-color: gray;
+                background-color: rgb(71, 11, 11);
             }
 
             .pokemon
