--- a/taller3/src/app/component/header/header.component.scss
+++ b/taller3/src/app/component/header/header.component.scss
@@ -11,7 +11,7 @@ header
 
         #imgFooter
         {
-            background:white;
+            background-image: url("../../../assets/icon.png");
             width: 50px;
             height: 50px;
         }
