--- a/taller4/src/app/home/home-pokemons/home-pokemons.component.html
+++ b/taller4/src/app/home/home-pokemons/home-pokemons.component.html
@@ -1,14 +1,41 @@
 <main>
     <div>
-      
-      <div id="titulo">OTHERS</div>
+      <p id="titulo">Lista de Pokémon</p>
 
       <div id="stockPokemon">
+
+          <div class="caja"></div>
+          <div class="caja"></div>
+          <div class="caja"></div>
+          <div class="caja"></div>
+          <div class="caja"></div>
+          <!--
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          <p class="titulo">Lista de Pokémon</p>
+          -->
+
+          <!--
           <div id="pokemon1" class="pokemon"></div>
           <div id="pokemon2" class="pokemon"></div>
           <div id="pokemon3" class="pokemon"></div>
           <div id="pokemon4" class="pokemon"></div> 
+          <div id="pokemon5" class="pokemon"></div>
+          <div id="pokemon6" class="pokemon"></div>
+          <div id="pokemon7" class="pokemon"></div>
+          <div id="pokemon8" class="pokemon"></div> 
+          -->
       </div>
-
+  
     </div>
 </main>
