--- a/taller4/src/app/home/home-pokemons/home-pokemons.component.html
+++ b/taller4/src/app/home/home-pokemons/home-pokemons.component.html
@@ -2,13 +2,8 @@
     <div>
       <p id="titulo">Lista de Pokémon</p>
 
-      <div id="stockPokemon">
-
-          <div class="caja"></div>
-          <div class="caja"></div>
-          <div class="caja"></div>
-          <div class="caja"></div>
-          <div class="caja"></div>
+      <div id="stockPokemon" >
+          <button id="{{pokemon.id}}" class="caja" *ngFor="let pokemon of pokemons.pokemons"> <img src="{{pokemon.url}}" /> <p> {{ pokemon.name }} </p> </button>
       </div>
   
     </div>
