--- a/taller4/src/app/home/home-pokemons/home-pokemons.component.scss
+++ b/taller4/src/app/home/home-pokemons/home-pokemons.component.scss
@@ -4,9 +4,31 @@ main
     {
         #stockPokemon
         {
+            .caja:hover
+            {
+                background: green;
+            }
+
             .caja
             {
-                background: black;
+                p
+                {
+                    font-size: 14px;
+                    font-family: arial;
+                    color: white;   
+                    padding: 6px;
+                    background-color: blue;
+                    border-radius: 5px;
+                    width: 60%;
+                    height: 16px;
+                    margin: auto;
+                }
+
+                transition: 0.15s;
+                outline: 0px;
+                border: 0px;
+                border-radius: 5px;    
+                background-color: transparent;    
                 display: inline-block;
                 margin: 2px;
                 width: 150px;
