--- a/taller4/src/app/detail/detail-pokemain/detail-pokemain.component.html
+++ b/taller4/src/app/detail/detail-pokemain/detail-pokemain.component.html
@@ -3,24 +3,24 @@
     <div id="principal">
         <div id="titulo">
             <div id="icono"></div>
-            <div id="texto" routerLink = "/">CHARIZARD</div>
+            <div id="texto" routerLink = "/">{{Name}}</div>
         </div>
         <div id="imagen"></div>   
     </div>
 
-    <div id="caracteristicas" *ngFor = "let pokemon of BDPokemons.pokemons;  let i= index;">
+    <div id="caracteristicas">
         <ul>
             <li>FEATURES</li>
-            <li>Altura: {{i+1}} - {{pokemon.name}}</li>
-            <li>Peso: {{pokemon.name}}</li>
-            <li>Categoría: {{pokemon.name}}</li>
-            <li>Habilidad: {{pokemon.name}}</li>
-            <li>Sexo: {{pokemon.name}}</li>
+            <li>Altura: {{Altura}}</li>
+            <li>Peso: {{Peso}}</li>
+            <li>Categoría: {{Categoria}}</li>
+            <li>Habilidad: {{Habilidad}}</li>
+            <li>Sexo: {{Sexo}}</li>
             
             <div>
-                <button id="subir" (click)="puntaje = puntaje + 1"></button>
-                <li>{{puntaje}}</li>
-                <button id="bajar" (click)="puntaje = puntaje - 1"></button>
+                <button id="subir" (click)="Puntaje = Puntaje + 1"></button>
+                <li>{{Puntaje}}</li>
+                <button id="bajar" (click)="Puntaje = Puntaje - 1"></button>
             </div>   
         </ul>
     </div>
