--- a/taller4/src/app/detail/detail-pokemain/detail-pokemain.component.html
+++ b/taller4/src/app/detail/detail-pokemain/detail-pokemain.component.html
@@ -3,7 +3,7 @@
     <div id="principal">
         <div id="titulo">
             <div id="icono"></div>
-            <div id="texto" routerLink = "/">{{Name}}</div>
+            <div id="texto">{{Name}}</div>
         </div>
         <div id="imagen"> </div>   
     </div>
