--- a/taller4/src/app/home/home-header/home-header.component.html
+++ b/taller4/src/app/home/home-header/home-header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div>
-      <div id="imgFooter"></div>
+      <div id="imgFooter" routerLink = "/"></div>
       <div id="tituloFooter">POKÉDEX_</div>
   </div>
 </header>
